[gd_scene load_steps=13 format=3 uid="uid://ccj5fi8xp7xsd"]

[ext_resource type="Script" uid="uid://q5pqc80n1t5r" path="res://Scripts/Patintero/patintero_main.gd" id="1_q6fdc"]
[ext_resource type="PackedScene" uid="uid://dja4w5pgnhm58" path="res://Scenes/Patintero/main_player.tscn" id="3_p53ya"]
[ext_resource type="PackedScene" uid="uid://sax21ek8fo7m" path="res://Scenes/Patintero/patintero_map.tscn" id="4_ji7og"]
[ext_resource type="Script" uid="uid://dm1deb07aaw8c" path="res://Scripts/Patintero/horizontal_bot.gd" id="5_4vtit"]
[ext_resource type="PackedScene" uid="uid://cgdw6spo4ei61" path="res://Scenes/Patintero/vertical_bot.tscn" id="5_qoqof"]
[ext_resource type="AudioStream" uid="uid://cqm5jjuipufnm" path="res://Assets/Audio/SFX/coin_sfx.mp3" id="7_r7t3u"]
[ext_resource type="AudioStream" uid="uid://bnpf1b4egv74g" path="res://Assets/Audio/Music/Fishball Fight.mp3" id="9_a0e8k"]
[ext_resource type="PackedScene" uid="uid://dwt51bujv2mhx" path="res://Scenes/BaseScenes/UI/user_interface.tscn" id="9_i0cr5"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="9_jqj7b"]
[ext_resource type="Texture2D" uid="uid://dbnpoqg0knc5k" path="res://Assets/Art/Maps/Tilesets/kylefeliciano/volcano.png" id="10_jqj7b"]
[ext_resource type="Texture2D" uid="uid://dnqy7kbgxl003" path="res://Assets/Art/UI/UI_Sky_Background.png" id="11_a0e8k"]

[sub_resource type="Environment" id="Environment_a0e8k"]
background_mode = 3
background_energy_multiplier = 1.48
background_canvas_max_layer = 1
ambient_light_source = 3
ambient_light_color = Color(0.737255, 0.501961, 0.313726, 0.780392)
ambient_light_energy = 0.95
reflected_light_source = 2
tonemap_mode = 1
ssr_enabled = true
glow_enabled = true
glow_normalized = true
glow_intensity = 6.78

[node name="Patintero" type="Node2D"]
position = Vector2(1, 0)
script = ExtResource("1_q6fdc")

[node name="main_player" parent="." instance=ExtResource("3_p53ya")]
z_index = 4
position = Vector2(-266, -15)

[node name="Music" type="AudioStreamPlayer2D" parent="main_player"]
position = Vector2(118, 29)
stream = ExtResource("9_a0e8k")
autoplay = true
parameters/looping = true

[node name="map" parent="." instance=ExtResource("4_ji7og")]
position = Vector2(10, 5)

[node name="horizontal_enemy" parent="." instance=ExtResource("5_qoqof")]
z_index = 7
position = Vector2(-37, -30)
script = ExtResource("5_4vtit")

[node name="sound_effects" type="Node2D" parent="."]

[node name="coin_sfx" type="AudioStreamPlayer2D" parent="sound_effects"]
stream = ExtResource("7_r7t3u")
volume_db = 7.0

[node name="UserInterface" parent="." instance=ExtResource("9_i0cr5")]

[node name="Virtual Joystick" parent="UserInterface" instance=ExtResource("9_jqj7b")]
z_index = 15
offset_left = -29.0
offset_top = -361.0
offset_right = 271.0
offset_bottom = -61.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(43, 16)
motion_scale = Vector2(0.1, 1)
motion_offset = Vector2(300, 0)

[node name="Volcano" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-210, -237)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_jqj7b")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.05, 1)
motion_offset = Vector2(400, 0)
motion_mirroring = Vector2(600, 0)

[node name="UiSkyBackground" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
z_index = -1
position = Vector2(-193, -269)
texture = ExtResource("11_a0e8k")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_a0e8k")

[connection signal="touched_enemy" from="main_player" to="." method="_on_main_player_touched_enemy"]
